# project_manager

./: CMakeLists.txt  README.md
src/: inotify.c  main.c  main.h  notify.c  utils.c
src/includes/: inotify.h  main.h  notify.h  utils.h
